--- a/.github/workflows/r-th.yml
+++ b/.github/workflows/r-th.yml
@@ -1,4 +1,4 @@
-name: r
+name: r -th
 
 on:
   push:
@@ -39,16 +39,11 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="r/cpp/+hl+ts-sz-zl" \
+            -DBUILDNAME:STRING="r/-th" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DHDF5_ALLOW_UNSUPPORTED:BOOL=ON \
-            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
-            -DHDF5_BUILD_HL_LIB:BOOL=ON \
-            -DHDF5_ENABLE_THREADSAFE:BOOL=ON \
-            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
-            -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_THREAD:BOOL=OFF \
             -DSITE:STRING=obsd \
             ..
             ctest -D Experimental -C Release
