--- a/.github/workflows/localstack.yml
+++ b/.github/workflows/localstack.yml
@@ -43,6 +43,5 @@ jobs:
             mkdir build
             cd build
             cmake -DCMAKE_TOOLCHAIN_FILE=/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake -DAWS=ON -DPOCO=ON -DSITE:STRING="ubu" -DBUILDNAME="omni/r/aws+poco" ..
-            ctest -C Release -T Build
-            ctest -C Release -T Test
-            cd ../..
+            ctest -C Release -D Experimental
+
