--- a/.github/workflows/h5py.yml
+++ b/.github/workflows/h5py.yml
@@ -2,7 +2,7 @@ name: h5py
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
 
     - name: Run a multi-line script
       run: |
-        sed -i 's/hdf5@1.10.6:1.14/hdf5@1.10.6:/g' ./spack/var/spack/repos/builtin/packages/py-h5py/package.py
+#        sed -i 's/hdf5@1.10.6:1.14/hdf5@1.10.6:/g' ./spack/var/spack/repos/builtin/packages/py-h5py/package.py
         . ./spack/share/spack/setup-env.sh      
         ./spack/bin/spack spec py-h5py@master+mpi ^hdf5@develop-2.0
         ./spack/bin/spack install py-h5py@master+mpi ^hdf5@develop-2.0
