test: apt libc++

--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -12,6 +12,10 @@ jobs:
       run:
         shell: bash -l {0}
     steps:
+      - name: apt
+        run: |
+          sudo apt update
+          sudo apt -y install libstdc++6
       - name: miniconda
         uses: conda-incubator/setup-miniconda@v3
       - name: iowarp
@@ -19,7 +23,5 @@ jobs:
           conda install -y libgcc-ng=11.2.0
           conda install -y iowarp::iowarp
           which wrp
+          ldd /usr/share/miniconda/envs/test/bin/wrp
           wrp
-
-
-
