--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -20,6 +20,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
       - name: iowarp
         run: |
+          conda install -c conda-forge libgcc-ng
           conda install -y libgcc-ng=11.2.0
           conda install -y iowarp::iowarp
           which wrp
