--- a/.github/workflows/u24-musl.yml
+++ b/.github/workflows/u24-musl.yml
@@ -11,6 +11,9 @@ jobs:
     - name: Install Musl Compiler
       run: |
         sudo apt-get update
+        sudo apt-get install -y software-properties-common
+        sudo add-apt-repository universe
+        sudo apt-get update
         sudo apt-get install -y gcc-aarch64-linux-gnu
         sudo apt-get install binfmt-support qemu qemu-user-static
     - name: Get Sources
@@ -19,7 +22,7 @@ jobs:
       run: |
         echo $PWD
         wget https://musl.cc/aarch64-linux-musl-cross.tgz
-        tar -xvzf aarch64-linux-musl-cross.tgz      
+        tar -xvzf aarch64-linux-musl-cross.tgz
         ./aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc --version
         ls ./aarch64-linux-musl-cross/bin/
         sudo cp -r ./aarch64-linux-musl-cross/aarch64-linux-musl/lib/* /lib/
@@ -31,4 +34,4 @@ jobs:
         cmake -DCMAKE_C_COMPILER=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc -DCMAKE_AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar -DBUILD_SHARED_LIBS=OFF -DCMAKE_SYSTEM_PROCESSOR=arm ..        
         make
         make test
-        
+
