--- a/.github/workflows/win-conda.yml
+++ b/.github/workflows/win-conda.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           channels: conda-forge,spyder-ide
       - name: Install OMNI
-        run: conda install iowarp::omni
-      - name: Test OMNI
-        run: wrp
+        run: |
+          conda install iowarp::omni
+          rehash
+          which wrp
+          wrp
