--- a/.github/workflows/win-conda.yml
+++ b/.github/workflows/win-conda.yml
@@ -16,5 +16,6 @@ jobs:
         run: |
           conda install iowarp::omni
           rehash
-          which wrp
+          which conda
+          conda activate test
           wrp
