test(lin,conda): rehash

--- a/.github/workflows/lin-conda.yml
+++ b/.github/workflows/lin-conda.yml
@@ -16,5 +16,9 @@ jobs:
       - name: install OMNI
         run: conda install iowarp::omni
       - name: test OMNI
-        run: wrp
+        run: |
+          rehash
+          which conda
+          conda activate test
+          wrp
 
