test(lin,conda): which

--- a/.github/workflows/lin-conda.yml
+++ b/.github/workflows/lin-conda.yml
@@ -17,8 +17,8 @@ jobs:
         run: conda install iowarp::omni
       - name: test OMNI
         run: |
-          rehash
           which conda
           conda activate test
+          which wrp
           wrp
 
