test(lin,conda): ls

--- a/.github/workflows/lin-conda.yml
+++ b/.github/workflows/lin-conda.yml
@@ -17,6 +17,5 @@ jobs:
         run: |
           conda install iowarp::omni
           which conda
-          which wrp
+          ls /usr/share/miniconda/bin/
           locate wrp
-
