--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: hyoklee/vcpkg
+      - name: Install Autotools dependencies
+        run: sudo apt-get update && sudo apt-get install -y autoconf automake libtool m4 autoconf-archive          
       - name: Install vcpkg
         run: |
           ./bootstrap-vcpkg.sh          
