--- a/.github/workflows/mac13-container.yml
+++ b/.github/workflows/mac13-container.yml
@@ -7,11 +7,16 @@ on:
     branches: [ main ]
 
 jobs:
-  test-on-debian-experimental:
+  test-on-mac:
     runs-on: macos-13
+    
     container:
       image: iowarp/iowarp-test
     steps:
+    - name: Setup Docker on macOS
+      uses: douglascamata/setup-docker-on-macos@v1.0.0
+    - name: Verify Docker installation
+      run: docker --version
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Show system details
