--- a/.github/workflows/iowarp-setup.yml
+++ b/.github/workflows/iowarp-setup.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Install Spack
         run: |
           git clone https://github.com/spack/spack.git "${HOME}/spack"
-          echo ". ${HOME}/spack/share/spack/setup-env.sh" >> $GITHUB_ENV
+#          echo ". ${HOME}/spack/share/spack/setup-env.sh" >> $GITHUB_ENV
 
       - name: Add IOWarp Spack repo and install iowarp
         run: |
