ci(iowarp): merge all steps

--- a/.github/workflows/iowarp-setup.yml
+++ b/.github/workflows/iowarp-setup.yml
@@ -32,19 +32,12 @@ jobs:
           mkdir -p "${IOWARP}"
           git clone https://github.com/iowarp/iowarp-install.git "${IOWARP}/iowarp-install"
 
-      - name: Install wrpgit requirements
+      - name: Install wrpgit and test
         run: |
           cd "${IOWARP}/iowarp-install"
           pip3 install -r requirements.txt
           chmod +x wrpgit
-
-      - name: Initialize wrpgit
-        run: |
           cd "${IOWARP}/iowarp-install"
-          ./wrpgit init
-
-      - name: Patch wrpgit.yaml for forking
-        run: |
           cd "${IOWARP}/iowarp-install"
           yq eval '
             .username = strenv(GITHUB_USERNAME) |
@@ -52,19 +45,8 @@ jobs:
             .token = strenv(GITHUB_TOKEN) |
             .modules[].fork = true
           ' -i wrpgit.yaml
-
-#      - name: Fork IOWarp repos
-#        run: |
-#          cd "${IOWARP}/iowarp-install"
-#          ./wrpgit fork
-
-      - name: Clone IOWarp repos
-        run: |
           cd "${IOWARP}/iowarp-install"
           ./wrpgit clone
-
-      - name: Install Spack
-        run: |
           git clone https://github.com/spack/spack.git -b v0.23.0 "${HOME}/spack"
           source "${HOME}/spack/share/spack/setup-env.sh"
           spack repo add "${IOWARP}/iowarp-install/iowarp-spack"
