ci(iowarp): install libhdf5-dev

--- a/.github/workflows/iowarp-setup.yml
+++ b/.github/workflows/iowarp-setup.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y lmod 
+          sudo apt-get install -y lmod libhdf5-dev
 
       - name: Install yq (YAML processor)
         run: |
