--- a/.github/workflows/iowarp-setup.yml
+++ b/.github/workflows/iowarp-setup.yml
@@ -57,5 +57,6 @@ jobs:
           pip install -r requirements.txt
           ./wrpgit setup
           ./wrpgit build
+          jarvis ppl run
           ./wrpgit clean
           ./wrpgit recreate
