--- a/.github/workflows/rck9-cpp-zl.yml
+++ b/.github/workflows/rck9-cpp-zl.yml
@@ -1,9 +1,9 @@
-name: rck9 hdf5-1.14.6 cpp ae zl
+name: rck9 hdf5-1.14.6 cpp zl
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build-and-test:
@@ -22,8 +22,6 @@ jobs:
       - name: Install dependencies
         run: |
           dnf install -y cmake
-          dnf install -y libaec
-          dnf install -y libaec-devel
           dnf install -y procps-ng
           dnf install -y zlib
       - name: build hdf5
@@ -33,12 +31,12 @@ jobs:
           cd build
           cmake --log-level=VERBOSE --fresh \
                 -DHDF5_BUILD_CPP_LIB:BOOL=ON \
-                -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
+                -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
                 -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON \
                 -DSZIP_LIBRARY:PATH="/usr/lib64/libsz.so.2.0.1" \
                 -DSZIP_INCLUDE_DIR="/usr/include" \
                 -DSITE:STRING="rck-9" \
-                -DBUILDNAME:STRING="1.14.6/r/cpp/ae/zl" \
+                -DBUILDNAME:STRING="1.14.6/r/cpp/zl" \
                 -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
                 -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
                 ..
