--- a/.github/workflows/rck9-cpp-zl.yml
+++ b/.github/workflows/rck9-cpp-zl.yml
@@ -24,6 +24,7 @@ jobs:
           dnf install -y cmake
           dnf install -y procps-ng
           dnf install -y zlib
+          dnf group install "Development Tools"
       - name: build hdf5
         run: |
           cd hdf5
